--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -103,15 +103,31 @@ msgstr ""
 
 msgctxt "#30043"
 msgid "Notify progress"
-msgstr "Oznamovaù priebeh"
+msgstr "OznamovaÔøΩ priebeh"
 
 msgctxt "#30044"
 msgid "Notify every"
 msgstr ""
 
+msgctxt "#30050"
+msgid "Any"
+msgstr "Any"
+
 msgctxt "#30051"
-msgid "Experimental functions"
-msgstr ""
+msgid "480p+"
+msgstr "480p+"
+
+msgctxt "#30052"
+msgid "720p+"
+msgstr "720p+"
+
+msgctxt "#30053"
+msgid "1080p+"
+msgstr "1080p+"
+
+msgctxt "#30054"
+msgid "4K/UHD only"
+msgstr "4K/UHD only"
 
 msgctxt "#30101"
 msgid "To use this plugin, you must enter Webshare account in the settings."
